--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "nuxt": "^3.7.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
+    "pinia": "^2.1.7",
+    "pnpm": "^8.10.5",
+    "yarn": "^1.22.21"
   }
 }
